# SFML_game

./: CMakeLists.txt
GAME/: main.cpp
SFML2.5.1/src/SFML/Audio/: SoundFileReaderFlac.cpp  SoundFileReaderFlac.hpp
SFML2.5/include/SFML/ucrt/: assert.h
SFML2.5/include/SFML/vs2019/: crtversion.h
SFML2.5/lib/: _libtexture.a__  libtexture.a__
